Feat: activities added

--- a/app/src/main/res/layout/activity_dropdown.xml
+++ b/app/src/main/res/layout/activity_dropdown.xml
@@ -42,4 +42,11 @@
         android:minHeight="48dp"
         android:text="autocom" />
 
+    <EditText
+        android:id="@+id/date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="date" />
+
 </LinearLayout>
