--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#2196F3</color>
-    <color name="green">#12D11D</color>
+    <color name="orange">#FFA500</color>
+    <color name="violet">#8F00FF</color>
+
 </resources>
